src/main/java/com/firespider/spidersql/parser/SpiderSQLParser.java
// Generated from /Users/stone/IdeaProjects/firespider-spidersql/SpiderSQL.g4 by ANTLR 4.7
package com.firespider.spidersql.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SpiderSQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, GET_STR=14, SAVE_STR=15, SCAN_STR=16, 
		DESC_STR=17, PRINT_STR=18, PARALLEL=19, SERIAL=20, ASSIGN=21, C_VAR=22, 
		STRING=23, DOUBLE=24, INT=25, WS=26;
	public static final int
		RULE_spidersql = 0, RULE_multiple_statement = 1, RULE_combine_statement = 2, 
		RULE_simple_statement = 3, RULE_push_statement = 4, RULE_mul_var = 5, 
		RULE_var = 6, RULE_assign_statement = 7, RULE_get = 8, RULE_save = 9, 
		RULE_desc = 10, RULE_scan = 11, RULE_print = 12, RULE_obj = 13, RULE_map = 14, 
		RULE_array = 15, RULE_value = 16, RULE_c_mul_var = 17;
	public static final String[] ruleNames = {
		"spidersql", "multiple_statement", "combine_statement", "simple_statement", 
		"push_statement", "mul_var", "var", "assign_statement", "get", "save", 
		"desc", "scan", "print", "obj", "map", "array", "value", "c_mul_var"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'->'", "'-['", "']>'", "','", "'('", "')'", "'{'", "'}'", "'['", 
		"']'", "'true'", "'false'", "'null'", null, null, null, null, null, "';'", 
		"'|'", "':'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "GET_STR", "SAVE_STR", "SCAN_STR", "DESC_STR", "PRINT_STR", 
		"PARALLEL", "SERIAL", "ASSIGN", "C_VAR", "STRING", "DOUBLE", "INT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SpiderSQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SpiderSQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SpidersqlContext extends ParserRuleContext {
		public SpidersqlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_spidersql; }
	 
		public SpidersqlContext() { }
		public void copyFrom(SpidersqlContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ExecuteMultipleContext extends SpidersqlContext {
		public Multiple_statementContext multiple_statement() {
			return getRuleContext(Multiple_statementContext.class,0);
		}
		public ExecuteMultipleContext(SpidersqlContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpiderSQLListener ) ((SpiderSQLListener)listener).enterExecuteMultiple(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpiderSQLListener ) ((SpiderSQLListener)listener).exitExecuteMultiple(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpiderSQLVisitor ) return ((SpiderSQLVisitor<? extends T>)visitor).visitExecuteMultiple(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExecuteSimpleContext extends SpidersqlContext {
		public Combine_statementContext combine_statement() {
			return getRuleContext(Combine_statementContext.class,0);
		}
		public ExecuteSimpleContext(SpidersqlContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpiderSQLListener ) ((SpiderSQLListener)listener).enterExecuteSimple(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpiderSQLListener ) ((SpiderSQLListener)listener).exitExecuteSimple(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpiderSQLVisitor ) return ((SpiderSQLVisitor<? extends T>)visitor).visitExecuteSimple(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpidersqlContext spidersql() throws RecognitionException {
		SpidersqlContext _localctx = new SpidersqlContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_spidersql);
		try {
			setState(38);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				_localctx = new ExecuteMultipleContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(36);
				multiple_statement();
				}
				break;
			case 2:
				_localctx = new ExecuteSimpleContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(37);
				combine_statement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Multiple_statementContext extends ParserRuleContext {
		public List<Combine_statementContext> combine_statement() {
			return getRuleContexts(Combine_statementContext.class);
		}
		public Combine_statementContext combine_statement(int i) {
			return getRuleContext(Combine_statementContext.class,i);
		}
		public List<TerminalNode> SERIAL() { return getTokens(SpiderSQLParser.SERIAL); }
		public TerminalNode SERIAL(int i) {
			return getToken(SpiderSQLParser.SERIAL, i);
		}
		public Multiple_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiple_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpiderSQLListener ) ((SpiderSQLListener)listener).enterMultiple_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpiderSQLListener ) ((SpiderSQLListener)listener).exitMultiple_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpiderSQLVisitor ) return ((SpiderSQLVisitor<? extends T>)visitor).visitMultiple_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Multiple_statementContext multiple_statement() throws RecognitionException {
		Multiple_statementContext _localctx = new Multiple_statementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_multiple_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			combine_statement();
			setState(43); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(41);
				match(SERIAL);
				setState(42);
				combine_statement();
				}
				}
				setState(45); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SERIAL );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Combine_statementContext extends ParserRuleContext {
		public List<Simple_statementContext> simple_statement() {
			return getRuleContexts(Simple_statementContext.class);
		}
		public Simple_statementContext simple_statement(int i) {
			return getRuleContext(Simple_statementContext.class,i);
		}
		public List<TerminalNode> PARALLEL() { return getTokens(SpiderSQLParser.PARALLEL); }
		public TerminalNode PARALLEL(int i) {
			return getToken(SpiderSQLParser.PARALLEL, i);
		}
		public Combine_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_combine_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpiderSQLListener ) ((SpiderSQLListener)listener).enterCombine_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpiderSQLListener ) ((SpiderSQLListener)listener).exitCombine_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpiderSQLVisitor ) return ((SpiderSQLVisitor<? extends T>)visitor).visitCombine_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Combine_statementContext combine_statement() throws RecognitionException {
		Combine_statementContext _localctx = new Combine_statementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_combine_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			simple_statement();
			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PARALLEL) {
				{
				{
				setState(48);
				match(PARALLEL);
				setState(49);
				simple_statement();
				}
				}
				setState(54);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Simple_statementContext extends ParserRuleContext {
		public Assign_statementContext assign_statement() {
			return getRuleContext(Assign_statementContext.class,0);
		}
		public Push_statementContext push_statement() {
			return getRuleContext(Push_statementContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public Simple_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simple_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpiderSQLListener ) ((SpiderSQLListener)listener).enterSimple_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpiderSQLListener ) ((SpiderSQLListener)listener).exitSimple_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpiderSQLVisitor ) return ((SpiderSQLVisitor<? extends T>)visitor).visitSimple_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Simple_statementContext simple_statement() throws RecognitionException {
		Simple_statementContext _localctx = new Simple_statementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_simple_statement);
		try {
			setState(58);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(55);
				assign_statement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(56);
				push_statement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(57);
				print();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Push_statementContext extends ParserRuleContext {
		public Push_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_push_statement; }
	 
		public Push_statementContext() { }
		public void copyFrom(Push_statementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MultiplePushContext extends Push_statementContext {
		public List<Mul_varContext> mul_var() {
			return getRuleContexts(Mul_varContext.class);
		}
		public Mul_varContext mul_var(int i) {
			return getRuleContext(Mul_varContext.class,i);
		}
		public TerminalNode INT() { return getToken(SpiderSQLParser.INT, 0); }
		public List<VarContext> var() {
			return getRuleContexts(VarContext.class);
		}
		public VarContext var(int i) {
			return getRuleContext(VarContext.class,i);
		}
		public MultiplePushContext(Push_statementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpiderSQLListener ) ((SpiderSQLListener)listener).enterMultiplePush(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpiderSQLListener ) ((SpiderSQLListener)listener).exitMultiplePush(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpiderSQLVisitor ) return ((SpiderSQLVisitor<? extends T>)visitor).visitMultiplePush(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DefaultPushContext extends Push_statementContext {
		public List<VarContext> var() {
			return getRuleContexts(VarContext.class);
		}
		public VarContext var(int i) {
			return getRuleContext(VarContext.class,i);
		}
		public Mul_varContext mul_var() {
			return getRuleContext(Mul_varContext.class,0);
		}
		public DefaultPushContext(Push_statementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpiderSQLListener ) ((SpiderSQLListener)listener).enterDefaultPush(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpiderSQLListener ) ((SpiderSQLListener)listener).exitDefaultPush(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpiderSQLVisitor ) return ((SpiderSQLVisitor<? extends T>)visitor).visitDefaultPush(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CountingPushContext extends Push_statementContext {
		public List<VarContext> var() {
			return getRuleContexts(VarContext.class);
		}
		public VarContext var(int i) {
			return getRuleContext(VarContext.class,i);
		}
		public TerminalNode INT() { return getToken(SpiderSQLParser.INT, 0); }
		public Mul_varContext mul_var() {
			return getRuleContext(Mul_varContext.class,0);
		}
		public CountingPushContext(Push_statementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpiderSQLListener ) ((SpiderSQLListener)listener).enterCountingPush(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpiderSQLListener ) ((SpiderSQLListener)listener).exitCountingPush(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpiderSQLVisitor ) return ((SpiderSQLVisitor<? extends T>)visitor).visitCountingPush(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Push_statementContext push_statement() throws RecognitionException {
		Push_statementContext _localctx = new Push_statementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_push_statement);
		try {
			setState(84);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				_localctx = new DefaultPushContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(60);
				var();
				setState(61);
				match(T__0);
				setState(64);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case C_VAR:
					{
					setState(62);
					var();
					}
					break;
				case T__4:
					{
					setState(63);
					mul_var();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case 2:
				_localctx = new CountingPushContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(66);
				var();
				setState(67);
				match(T__1);
				setState(68);
				match(INT);
				setState(69);
				match(T__2);
				setState(72);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case C_VAR:
					{
					setState(70);
					var();
					}
					break;
				case T__4:
					{
					setState(71);
					mul_var();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case 3:
				_localctx = new MultiplePushContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(74);
				mul_var();
				setState(75);
				match(T__1);
				setState(76);
				match(INT);
				setState(77);
				match(T__3);
				setState(78);
				var();
				setState(79);
				match(T__2);
				setState(82);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case C_VAR:
					{
					setState(80);
					var();
					}
					break;
				case T__4:
					{
					setState(81);
					mul_var();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Mul_varContext extends ParserRuleContext {
		public List<VarContext> var() {
			return getRuleContexts(VarContext.class);
		}
		public VarContext var(int i) {
			return getRuleContext(VarContext.class,i);
		}
		public Mul_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mul_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpiderSQLListener ) ((SpiderSQLListener)listener).enterMul_var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpiderSQLListener ) ((SpiderSQLListener)listener).exitMul_var(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpiderSQLVisitor ) return ((SpiderSQLVisitor<? extends T>)visitor).visitMul_var(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Mul_varContext mul_var() throws RecognitionException {
		Mul_varContext _localctx = new Mul_varContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_mul_var);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(T__4);
			setState(87);
			var();
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(88);
				match(T__3);
				setState(89);
				var();
				}
				}
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(95);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarContext extends ParserRuleContext {
		public TerminalNode C_VAR() { return getToken(SpiderSQLParser.C_VAR, 0); }
		public Assign_statementContext assign_statement() {
			return getRuleContext(Assign_statementContext.class,0);
		}
		public VarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpiderSQLListener ) ((SpiderSQLListener)listener).enterVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpiderSQLListener ) ((SpiderSQLListener)listener).exitVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpiderSQLVisitor ) return ((SpiderSQLVisitor<? extends T>)visitor).visitVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarContext var() throws RecognitionException {
		VarContext _localctx = new VarContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_var);
		try {
			setState(99);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				match(C_VAR);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				assign_statement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assign_statementContext extends ParserRuleContext {
		public Assign_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign_statement; }
	 
		public Assign_statementContext() { }
		public void copyFrom(Assign_statementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AssignSaveContext extends Assign_statementContext {
		public TerminalNode C_VAR() { return getToken(SpiderSQLParser.C_VAR, 0); }
		public TerminalNode ASSIGN() { return getToken(SpiderSQLParser.ASSIGN, 0); }
		public SaveContext save() {
			return getRuleContext(SaveContext.class,0);
		}
		public AssignSaveContext(Assign_statementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpiderSQLListener ) ((SpiderSQLListener)listener).enterAssignSave(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpiderSQLListener ) ((SpiderSQLListener)listener).exitAssignSave(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpiderSQLVisitor ) return ((SpiderSQLVisitor<? extends T>)visitor).visitAssignSave(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignGetContext extends Assign_statementContext {
		public TerminalNode C_VAR() { return getToken(SpiderSQLParser.C_VAR, 0); }
		public TerminalNode ASSIGN() { return getToken(SpiderSQLParser.ASSIGN, 0); }
		public GetContext get() {
			return getRuleContext(GetContext.class,0);
		}
		public AssignGetContext(Assign_statementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpiderSQLListener ) ((SpiderSQLListener)listener).enterAssignGet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpiderSQLListener ) ((SpiderSQLListener)listener).exitAssignGet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpiderSQLVisitor ) return ((SpiderSQLVisitor<? extends T>)visitor).visitAssignGet(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignValueContext extends Assign_statementContext {
		public TerminalNode C_VAR() { return getToken(SpiderSQLParser.C_VAR, 0); }
		public TerminalNode ASSIGN() { return getToken(SpiderSQLParser.ASSIGN, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public AssignValueContext(Assign_statementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpiderSQLListener ) ((SpiderSQLListener)listener).enterAssignValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpiderSQLListener ) ((SpiderSQLListener)listener).exitAssignValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpiderSQLVisitor ) return ((SpiderSQLVisitor<? extends T>)visitor).visitAssignValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Assign_statementContext assign_statement() throws RecognitionException {
		Assign_statementContext _localctx = new Assign_statementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_assign_statement);
		try {
			setState(110);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				_localctx = new AssignValueContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				match(C_VAR);
				setState(102);
				match(ASSIGN);
				setState(103);
				value();
				}
				break;
			case 2:
				_localctx = new AssignGetContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(104);
				match(C_VAR);
				setState(105);
				match(ASSIGN);
				setState(106);
				get();
				}
				break;
			case 3:
				_localctx = new AssignSaveContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(107);
				match(C_VAR);
				setState(108);
				match(ASSIGN);
				setState(109);
				save();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GetContext extends ParserRuleContext {
		public TerminalNode GET_STR() { return getToken(SpiderSQLParser.GET_STR, 0); }
		public ObjContext obj() {
			return getRuleContext(ObjContext.class,0);
		}
		public GetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_get; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpiderSQLListener ) ((SpiderSQLListener)listener).enterGet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpiderSQLListener ) ((SpiderSQLListener)listener).exitGet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpiderSQLVisitor ) return ((SpiderSQLVisitor<? extends T>)visitor).visitGet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GetContext get() throws RecognitionException {
		GetContext _localctx = new GetContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_get);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(GET_STR);
			setState(113);
			obj();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SaveContext extends ParserRuleContext {
		public TerminalNode SAVE_STR() { return getToken(SpiderSQLParser.SAVE_STR, 0); }
		public ObjContext obj() {
			return getRuleContext(ObjContext.class,0);
		}
		public SaveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_save; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpiderSQLListener ) ((SpiderSQLListener)listener).enterSave(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpiderSQLListener ) ((SpiderSQLListener)listener).exitSave(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpiderSQLVisitor ) return ((SpiderSQLVisitor<? extends T>)visitor).visitSave(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SaveContext save() throws RecognitionException {
		SaveContext _localctx = new SaveContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_save);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(SAVE_STR);
			setState(116);
			obj();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
